# tuple

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  cabal.project  cabal.project.8.10.7.freeze  cabal.project.8.6.5.freeze  cabal.project.8.8.4.freeze  cabal.project.9.0.2.freeze  cabal.project.9.2.8.freeze  cabal.project.9.4.5.freeze  cabal.project.9.6.2.freeze  cspell.json  flake.nix  hie.yaml  psakefile.ps1  stack-ghc-8.2.yaml  stack-ghc-8.4.yaml  stack-ghc-8.6.yaml  stack-ghc-8.8.yaml  stack.yaml
.circleci/: config.yml
.github/workflows/: build.yaml
homotuple/: .ghci  .gitignore  .stylish-haskell.yaml  ChangeLog.md  Makefile  README.md  Setup.hs  homotuple.cabal  package.yaml  psakefile.ps1
homotuple-only/: .stylish-haskell.yaml  homotuple-only.cabal  package.yaml  psakefile.ps1
homotuple/dev/: homotuple-dev.cabal  homotuple-template.hs
homotuple/template/: Homotuple.hs  HomotupleItem.hs
list-tuple/: .gitignore  .stylish-haskell.yaml  ChangeLog.md  LICENSE  Makefile  README.md  Setup.hs  list-tuple.cabal  package.yaml
list-tuple-only/: list-tuple-only.cabal  package.yaml
list-tuple/dev/: list-tuple-dev.cabal  (+1 more)
single-tuple/: .gitignore  .stylish-haskell.yaml  ChangeLog.md  LICENSE  README.md  package.yaml  psakefile.ps1  single-tuple.cabal
single-tuple-class/: package.yaml  single-tuple-class.cabal
single-tuple-identity/: package.yaml  single-tuple-identity.cabal
single-tuple-onetuple/: .gitignore  .stylish-haskell.yaml  package.yaml  single-tuple-onetuple.cabal
single-tuple-only/: package.yaml  single-tuple-only.cabal
(+23 files in other folders)
