cabal-version: 2.2

name:           homotuple-dev
version:        0.0.1.0
build-type:     Simple

executable homotuple-template
  hs-source-dirs:       .
  main-is:              homotuple-template.hs
  build-depends:        base >=4.10 && <5,
                        directory >=1.3 && <1.4
  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -Wmonomorphism-restriction
                        -Wmissing-exported-signatures
                        -Wmissing-home-modules
                        -Wmissing-import-lists
                        -Widentities
                        -Wredundant-constraints
                        -Wno-name-shadowing
  if impl(ghc >= 8.4.0)
    ghc-options:        -Wmissing-export-lists
                        -Wpartial-fields
  if impl(ghc >= 8.6.0)
    default-extensions: NoStarIsType
  default-language:     Haskell2010
